# LPBackend

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  version.cpp.in
.github/workflows/: cmake.yml  commitlint.yml
doc/: RESTful API.md
include/lpbackend/: extern.hpp  log.hpp  lpbackend_server.hpp  version.hpp
include/lpbackend/asio/: task_group.hpp
include/lpbackend/config/: config.hpp  lpbackend_config.hpp  pretty_print.hpp
include/lpbackend/networking/: file_downloader.hpp  mime_database.hpp  request_handler.hpp
include/lpbackend/plugin/: plugin.hpp  plugin_descriptor.hpp  plugin_loading_exception.hpp  plugin_manager.hpp
include/lpbackend/util/: literal_string.hpp  path_to_filename.hpp
src/lpbackend/: log.cpp  lpbackend_server.cpp
src/lpbackend/config/: lpbackend_config.cpp
src/lpbackend/plugin/: plugin.cpp  plugin_loading_exception.cpp  plugin_manager.cpp
